# Equivariant-Comparation-Rotation

./: .gitignore  Final_Report.ipynb  Final_Report_Clean.ipynb  Final_Report_backup.ipynb  README.md  conclusions.md  main.py  pyproject.toml
configs/: README.md  experiments.yaml
data/processed/: splits.json
notebooks/: equivariant_architecture_exploration.ipynb  group_order_exploration.ipynb  hyperparameter_selection.ipynb  run_all_experiments.ipynb  testing_S1.ipynb  understanding_e2cnn.ipynb
outputs/ARCH-Large/: config.yaml  evaluation_results.json  training_history.json
outputs/ARCH-Large-Deep/: config.yaml  evaluation_results.json  training_history.json
outputs/ARCH-Medium/: config.yaml  evaluation_results.json  training_history.json
outputs/Eq-1/: config.yaml  evaluation_results.json
outputs/Eq-2/: config.yaml  evaluation_results.json
outputs/GROUP-C16/: config.yaml  evaluation_results.json  training_history.json
outputs/GROUP-C4/: config.yaml  evaluation_results.json  training_history.json
outputs/NO-GPOOL/: config.yaml  evaluation_results.json  training_history.json
outputs/S-1/: config.yaml  evaluation_results.json
outputs/S-2/: config.yaml  evaluation_results.json
outputs/S-3/: config.yaml  evaluation_results.json
outputs/S-4/: config.yaml  evaluation_results.json
outputs/T-FE-1/: config.yaml  evaluation_results.json
scripts/: README.md  check_data.py  evaluate_checkpoint.py  extract_features.py  generate_comparison.py  generate_notebook.py  run_experiment.py  train.py  update_notebook.py  verify_equivariance.py
(+39 files in other folders)
