[project]
name = "dl-project"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "e2cnn>=0.2.3",
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.8",
  "notebook>=7.5.6",
  "pandas>=3.0.2",
  "pyyaml>=6.0.3",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "tensorboard>=2.20.0",
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
  "torchinfo>=1.8.0",
  "torchvision>=0.26.0",
  "tqdm>=4.67.3",
]
